# minesweeper

./: CMakeLists.txt  LICENSE  README.md  controller.h  custom_button.cpp  custom_button.h  main.cpp  model.cpp  view.cpp  view.h  view.ui
src/: controller.cpp  model.h
